# suspiria-asr

./: README.md  encode_latents.py  infer.py  pyproject.toml  requirements.txt  transcribe.py  upload_latents_to_hf.py
configs/: encoding.yaml  scaling.yaml  training.yaml
models/: __init__.py  decoder.py  mimi.py
modules/: conv.py  dummy_quantizer.py  layer_scale.py  mimi_transformer.py  resample.py  rope.py  seanet.py  stateful_module.py  transformer.py
training/: config.py  tokenizer.py  train.py
training/data/: __init__.py  alignment.py  collator.py  dataset.py  materialize_latents.py  types.py
training/utils/: collect_scaling_results.py  data.py  evaluation.py  inspect_alignment.py  inspect_batch.py  logging.py  metrics.py  model_builder.py  run_scaling_sweep.py  scaling.py  tokenizer_training.py  wer.py
